removed '-XX:MaxPermSize=' and '-XX:PermSize=' options, java 8 VM does not support them